--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-simplejson==3.14.0
-argparse==1.4.0
-pysam==0.14.1
-numpy==1.15.0
-scipy==1.1.0
-scikit-learn==0.19.2
+PyYAML
+argparse
+pysam
+numpy
+scipy
+scikit-learn
