--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-PyYAML
-argparse
-pysam
-numpy
-scipy
-scikit-learn
-numexpr
+CIRIquant==0.1.0
+numexpr==2.6.9
+numpy==1.16.4
+pysam==0.15.2
+PyYAML==5.1.1
+scikit-learn==0.20.3
+scipy==1.2.2
