--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ install:
   -
 script:
   - CIRIquant --version
+
+notifications:
+  pushover:
+    api_key: "${API_TOKEN}"
+    users:
+      - "${USER_TOKEN}"
