--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,26 @@ python:
   - "2.7"
 
 install:
+  - sudo apt-get update
+  - wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - source "$HOME/miniconda/etc/profile.d/conda.sh"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda info -a
+  - conda create -q -n CIRIquant python=2.7
+  - conda activate CIRIquant
+  - conda install -c bioconda samtools hisat2 stringtie bwa
   - pip install -r requirements.txt
   - python setup.py install
-  -
+
 script:
   - CIRIquant --version
+  - which bwa
+  - which hisat2
+  - which stringtie
+  - which samtools
 
 notifications:
   pushover:
