--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - conda create -q -n CIRIquant python=2.7
   - conda activate CIRIquant
   - conda install -c bioconda samtools hisat2 stringtie bwa
-  - pip install -r requirements.txt
+  - travis_retry pip install -r requirements.txt
   - python setup.py install
 
 script:
